manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "chatlog-web"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "chatlog-web"
  template:
    metadata:
      labels:
        app: "chatlog-web"
    spec:
      containers:
        - name: "chatlog-web"
          image: "diddledan/ubuntu-chatlog-web"
          ports:
          - containerPort: 3000
