manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatlog-web
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: ubulog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatlog-web
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatlog-websecure
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: ubulog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatlog-web
                port:
                  number: 3000
